[gd_scene load_steps=6 format=3 uid="uid://05ubeojbrbuf"]

[ext_resource type="Texture2D" uid="uid://dbugxyfskhd5a" path="res://assets/force-field.png" id="1_inqbm"]
[ext_resource type="Script" path="res://src/ui/item_card.gd" id="1_u3o5g"]
[ext_resource type="Texture2D" uid="uid://dxpfsxh0is0gx" path="res://assets/coin.png" id="2_yj7th"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i4ud3"]
bg_color = Color(0.12, 0.12, 0.14, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxnkk"]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.282366, 0.355686, 0.923023, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ItemCard" type="Control"]
custom_minimum_size = Vector2(252, 0)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_u3o5g")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -159.0
offset_right = 125.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i4ud3")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemSprite" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture = ExtResource("1_inqbm")
expand_mode = 1
stretch_mode = 5

[node name="ItemName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Shield"
horizontal_alignment = 1

[node name="PriceContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CoinIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/PriceContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("2_yj7th")
expand_mode = 1
stretch_mode = 5

[node name="ItemPrice" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PriceContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "500"
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="BuyButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_qxnkk")
text = "Buy"
